--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
+# Node modules
+/node_modules/
+
+# Build outputs
+/build/
+# React Native
+/.expo/
+# Testing
+/coverage/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS generated files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# Environment variables
+.env
+.env.*.local
+
+# npm packages
+package-lock.json
+yarn.lock
+
+# JSON Server DB (si usas json-server)
+db.json
+
+# .env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
